--- a/Proyecto_WEB/Proyecto_WEB/Views/Shared/_Layout.cshtml
+++ b/Proyecto_WEB/Proyecto_WEB/Views/Shared/_Layout.cshtml
@@ -39,19 +39,10 @@
                             <a href="/Home/Index" class="nav-link"><i class="typcn typcn-chart-area-outline"></i> Promociones</a>
                         </li>
                         <li class="nav-item">
-                            <a href="" class="nav-link with-sub"><i class="typcn typcn-document"></i> Gimnasios</a>
-                            <nav class="az-menu-sub">
-                                <a href="#" class="nav-link">San Jose</a>
-                                <a href="#" class="nav-link">Cartago</a>
-                                <a href="#" class="nav-link">Alajuela</a>
-                                <a href="#" class="nav-link">Heredia</a>
-                                <a href="#" class="nav-link">Guanacaste</a>
-                                <a href="#" class="nav-link">Puntarenas</a>
-                                <a href="#" class="nav-link">Limon</a>
-                            </nav>
+                            <a href="@Url.Action("ListaProductos", "Producto")" class="nav-link"><i class="typcn typcn-tags"></i></i> Productos</a>
                         </li>
                         <li class="nav-item">
-                            <a href="@Url.Action("Index", "Clase")" class="nav-link"><i class="fas fa-chalkboard"></i> Clases</a>
+                            <a href="@Url.Action("Index", "Clase")" class="nav-link"><i class="typcn typcn-device-desktop"></i> Clases</a>
                         </li>
                         <li class="nav-item">
                             <a href="@Url.Action("ListaProgreso", "Progreso")" class="nav-link"><i class="typcn typcn-chart-bar-outline"></i> Tu Progreso</a>
