--- a/Proyecto_WEB/Proyecto_WEB/Views/Shared/_Layout.cshtml
+++ b/Proyecto_WEB/Proyecto_WEB/Views/Shared/_Layout.cshtml
@@ -176,6 +176,7 @@
     <script src="~/pages/js/chart.flot.sampledata.js"></script>
     <script src="~/pages/js/dashboard.sampledata.js"></script>
     <script src="~/pages/js/jquery.cookie.js" type="text/javascript"></script>
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
