--- a/Proyecto_WEB/Proyecto_WEB/Views/Home/Index.cshtml
+++ b/Proyecto_WEB/Proyecto_WEB/Views/Home/Index.cshtml
@@ -34,11 +34,11 @@
     </div>
     <div class="col-md-4 mb-4">
         <div class="card h-80">
-            <img src="/pages/img/sesion.jpg" class="card-img-top" alt="Sesiones Grupales">
+            <img src="/pages/img/sesion.jpg" class="card-img-top" alt="Clases Grupales">
             <div class="card-body">
-                <h5 class="card-title">Sesiones Grupales</h5>
+                <h5 class="card-title">Clases Grupales</h5>
                 <p class="card-text">Únete a nuestras clases grupales para motivarte y disfrutar del ejercicio en comunidad.</p>
-                <a href="#" class="btn btn-primary">Ver horarios</a>
+                <a href="@Url.Action("Index", "Clase")" class="btn btn-primary">Ver Clases</a>
             </div>
         </div>
     </div>
