--- a/Proyecto_WEB/Proyecto_WEB/Views/Shared/_Layout.cshtml
+++ b/Proyecto_WEB/Proyecto_WEB/Views/Shared/_Layout.cshtml
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="~/pages/flag-icon-css/css/flag-icon.min.css">
     <link rel="stylesheet" href="~/pages/css/azia.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11.14.5/dist/sweetalert2.min.css" />
 </head>
 <body>
     <header>
@@ -109,7 +110,8 @@
                                      {
                                     <a href="#" class="dropdown-item"><i class="typcn typcn-user-outline"></i> Mi Perfil</a>
                                     <a href="#" class="dropdown-item"><i class="typcn typcn-edit"></i> Editar perfil</a>
-                                    <a href="@Url.Action("ClasesUsuario", "Clase")" class="dropdown-item"><i class="typcn typcn-time"></i> Tus clases</a>
+                                    <a href="@Url.Action("ClasesUsuario", "Clase")" class="dropdown-item"><i class="typcn typcn-time"></i> Mis clases</a>
+                                    <a href="@Url.Action("ConsultarFacturas", "Carrito")" class="dropdown-item"><i class=" fas fa-file-invoice-dollar"></i> Mis Compras</a>
                                     <a href="#" class="dropdown-item"><i class="typcn typcn-cog-outline"></i> Configuración de Cuenta</a>
                                     <a href="@Url.Action("Logout", "Login")" class="dropdown-item"><i class="typcn typcn-power-outline"></i> Cerrar sesión</a>
                                      }
@@ -188,6 +190,7 @@
     <script src="~/pages/js/dashboard.sampledata.js"></script>
     <script src="~/pages/js/jquery.cookie.js" type="text/javascript"></script>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.14.5/dist/sweetalert2.all.min.js"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
