--- a/Proyecto_WEB/Proyecto_WEB/Views/Shared/_Layout.cshtml
+++ b/Proyecto_WEB/Proyecto_WEB/Views/Shared/_Layout.cshtml
@@ -111,7 +111,7 @@
                                     <a href="#" class="dropdown-item"><i class="typcn typcn-user-outline"></i> Mi Perfil</a>
                                     <a href="#" class="dropdown-item"><i class="typcn typcn-edit"></i> Editar perfil</a>
                                     <a href="@Url.Action("ClasesUsuario", "Clase")" class="dropdown-item"><i class="typcn typcn-time"></i> Mis clases</a>
-                                    <a href="@Url.Action("ConsultarFacturas", "Carrito")" class="dropdown-item"><i class=" fas fa-file-invoice-dollar"></i> Mis Compras</a>
+                                    <a href="@Url.Action("ConsultarFacturas", "Carrito")" class="dropdown-item"><i class="fas fa-cash-register"></i> Mis Compras</a>
                                     <a href="#" class="dropdown-item"><i class="typcn typcn-cog-outline"></i> Configuración de Cuenta</a>
                                     <a href="@Url.Action("Logout", "Login")" class="dropdown-item"><i class="typcn typcn-power-outline"></i> Cerrar sesión</a>
                                      }
