--- a/Proyecto_WEB/Proyecto_WEB/Views/Shared/_LayoutAdmin.cshtml
+++ b/Proyecto_WEB/Proyecto_WEB/Views/Shared/_LayoutAdmin.cshtml
@@ -58,20 +58,7 @@
                                 </nav>
                             </li>
                             <li class="nav-item">
-                                <a href="chart-chartjs.html" class="nav-link"><i class="typcn typcn-chart-bar-outline"></i> Blog</a>
-                            </li>
-                            <li class="nav-item">
-                                <a href="" class="nav-link with-sub"><i class="typcn typcn-book"></i> Observaciones</a>
-                                <div class="az-menu-sub">
-                                    <div class="container">
-                                        <nav class="nav">
-                                            <a href="#" class="nav-link">Contatos</a>
-                                            <a href="#" class="nav-link">FAQs</a>
-                                            <a href="#" class="nav-link">Icons</a>
-                                            <a href="#" class="nav-link">Table</a>
-                                        </nav>
-                                    </div>
-                                </div>
+                                <a href="@Url.Action("ConsultarFacturasAdmin", "Carrito")" class="nav-link"><i class="fas fa-cash-register" style="margin-right: 8px;"></i> Lista de Facturas</a>
                             </li>
                         </ul>
                     </div>
