--- a/Proyecto_WEB/Proyecto_WEB/Views/Carrito/ConsultarFacturas.cshtml
+++ b/Proyecto_WEB/Proyecto_WEB/Views/Carrito/ConsultarFacturas.cshtml
@@ -6,7 +6,7 @@
     <thead>
         <tr>
             <th># Factura</th>
-            <th>Nombre de Usuario</th>
+            <th>Nombre</th>
             <th>Total ($)</th>
             <th>Fecha</th>
             <th>Acciones</th>
@@ -17,7 +17,7 @@
         {
             <tr>
                 <td>@item.FacturaID</td>
-                <td>@item.Username</td>
+                <td>@item.Nombre @item.Apellidos</td>
                 <td>$@item.Total.ToString("N2")</td>
                 <td>@item.Fecha.ToString("dd/MM/yyyy hh:mm:ss tt")</td>
                 <td>
