--- a/Proyecto_WEB/Proyecto_WEB/Views/Clase/Index.cshtml
+++ b/Proyecto_WEB/Proyecto_WEB/Views/Clase/Index.cshtml
@@ -8,7 +8,7 @@
 
 @if (ViewBag.Error != null)
 {
-    <div class="alert alert-danger">@ViewBag.Error</div>
+    <h1>@ViewBag.Error</h1>
 }
 
 <div class="row">
@@ -25,7 +25,7 @@
                         Horario: @clase.Horario<br />
                         Descripción: @clase.Descripcion
                     </p>
-                    <a href="@Url.Action("RegistrarClase", "Clase")" class="btn btn-primary">Registrarme</a>
+                    <a href="@Url.Action("RegistrarMiembroEnClase", "Clase", new { claseId = clase.ClaseID })" class="btn btn-primary">Registrarme</a>
                 </div>
             </div>
         </div>
