--- a/Proyecto_WEB/Proyecto_WEB/Views/Empleado/RegEmpleados.cshtml
+++ b/Proyecto_WEB/Proyecto_WEB/Views/Empleado/RegEmpleados.cshtml
@@ -1,4 +1,4 @@
-﻿@model Proyecto_WEB.Models.Empleado
+﻿@* @model Proyecto_WEB.Models.Empleado
 
 @{
     Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
@@ -118,3 +118,4 @@
 
     <button type="submit" class="btn btn-primary">Registrar</button>
 </form>
+ *@
