Registro en clase

--- a/Proyecto_WEB/Proyecto_WEB/Views/Clase/Index.cshtml
+++ b/Proyecto_WEB/Proyecto_WEB/Views/Clase/Index.cshtml
@@ -16,7 +16,7 @@
     {
         <div class="col-md-4 mb-4">
             <div class="card h-80">
-                    <img src="/images/clases.jpg" class="card-img-top" alt="Clases">
+                <img src="/images/clases.jpg" class="card-img-top" alt="Clases">
                 <div class="card-body">
                     <h4 class="card-title">@clase.Nombre</h4>
                     <h5>Entrenador Encargado: @clase.Entrenador</h5>
@@ -25,9 +25,15 @@
                         Horario: @clase.Horario<br />
                         Descripción: @clase.Descripcion
                     </p>
-                    <a href="@Url.Action("RegistrarMiembroEnClase", "Clase", new { claseId = clase.ClaseID })" class="btn btn-primary">Registrarme</a>
+
+                    <form action="@Url.Action("Index", "Clase")" method="post">
+                        <input type="hidden" name="claseId" value="@clase.ClaseID" /> 
+                        <button type="submit" class="btn btn-primary">Registrarme</button>
+                    </form>
+
                 </div>
             </div>
         </div>
     }
 </div>
+
