--- a/Proyecto_WEB/Proyecto_WEB/Views/Shared/_Layout.cshtml
+++ b/Proyecto_WEB/Proyecto_WEB/Views/Shared/_Layout.cshtml
@@ -43,7 +43,7 @@
                         <li class="nav-item">
                             <a href="@Url.Action("ListaProgreso", "Progreso")" class="nav-link"><i class="typcn typcn-chart-bar-outline"></i> Tu Progreso</a>
                         </li>
-                        <li class="nav-item">
+                    @*     <li class="nav-item">
                             <a href="" class="nav-link with-sub"><i class="typcn typcn-book"></i> Observaciones</a>
                             <div class="az-menu-sub">
                                 <div class="container">
@@ -55,7 +55,7 @@
                                     </nav>
                                 </div>
                             </div>
-                        </li>
+                        </li> *@
                     </ul>
                 </div>
                 <div class="az-header-right">
