--- a/Proyecto_WEB/Proyecto_WEB/Views/Clase/Index.cshtml
+++ b/Proyecto_WEB/Proyecto_WEB/Views/Clase/Index.cshtml
@@ -10,7 +10,12 @@
 {
     <h1>@ViewBag.Error</h1>
 }
-
+@{
+    if (ViewBag.Mensaje != null)
+    {
+        <div class="alert alert-secondary text-center pt-2">@ViewBag.Mensaje</div>
+    }
+}
 <div class="row">
     @foreach (var clase in Model)
     {
@@ -30,7 +35,7 @@
                         <input type="hidden" name="claseId" value="@clase.ClaseID" /> 
                         <button type="submit" class="btn btn-primary">Registrarme</button>
                     </form>
-
+              
                 </div>
             </div>
         </div>
